[gd_scene load_steps=11 format=3 uid="uid://cyfwty2q3rdse"]

[ext_resource type="Script" path="res://main.gd" id="1_0r6n5"]
[ext_resource type="PackedScene" uid="uid://rkdnhqgf2hpj" path="res://mob.tscn" id="2_50pww"]
[ext_resource type="PackedScene" uid="uid://4vwrqjegqwpj" path="res://player.tscn" id="3_veqnc"]
[ext_resource type="PackedScene" uid="uid://ccqoreueuxdb7" path="res://hud.tscn" id="4_0qnje"]
[ext_resource type="AudioStream" uid="uid://q2pf4fr8d0ks" path="res://art/House In a Forest Loop.ogg" id="5_55d8h"]
[ext_resource type="AudioStream" uid="uid://dw26fpygeag8o" path="res://art/gameover.wav" id="6_hp1r0"]
[ext_resource type="Texture2D" uid="uid://b3krlclni12fx" path="res://efeitos/Crystal_02.png" id="8_0ese5"]
[ext_resource type="Texture2D" uid="uid://co6tsfrgycmet" path="res://backgrounds/Starbasesnow.png" id="8_jlsp6"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bug8p"]
particle_flag_disable_z = true
direction = Vector3(0, 10, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
gravity = Vector3(0, 0, 0)
scale_min = 0.05
scale_max = 0.05

[node name="Main" type="Node"]
script = ExtResource("1_0r6n5")
mob_scene = ExtResource("2_50pww")

[node name="Player" parent="." instance=ExtResource("3_veqnc")]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_0qnje")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_55d8h")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_hp1r0")

[node name="BG2" type="Sprite2D" parent="."]
position = Vector2(253, 367)
scale = Vector2(0.283667, 0.525333)
texture = ExtResource("8_jlsp6")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(265, -165)
scale = Vector2(2, 2)
amount = 200
process_material = SubResource("ParticleProcessMaterial_bug8p")
texture = ExtResource("8_0ese5")
lifetime = 8.0
trail_lifetime = 0.01

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
